--- a/GreenBowlFoodsSystem/Views/Home/Privacy.cshtml
+++ b/GreenBowlFoodsSystem/Views/Home/Privacy.cshtml
@@ -93,7 +93,7 @@
     <div class="mt-5 text-center border-top border-secondary pt-4">
         <p class="text-white-50 small">
             System Version 1.0 | Last Policy Update: February 2026 <br>
-            For technical support or data requests, contact <a href="#" class="text-decoration-none text-info">it-support@greenbowlfoods.internal</a>
+            For technical support or data requests, contact <a href="#" class="text-decoration-none text-info">it-support@yopmail.com</a>
         </p>
     </div>
 
