--- a/GreenBowlFoodsSystem/Views/Account/Login.cshtml
+++ b/GreenBowlFoodsSystem/Views/Account/Login.cshtml
@@ -25,13 +25,13 @@
 
                 <form asp-action="Login" method="post">
                     <div class="form-group mb-4">
-                        <label for="Email" class="form-label">Email</label>
-                        <input type="email" name="Email" class="form-control" placeholder="Use:admin@yopmail.com" required />
+                        <label for="Email" class="form-label">Email (Use: admin@yopmail.com) </label>
+                        <input type="email" name="Email" class="form-control" placeholder="Use: admin@yopmail.com" required />
                     </div>
 
                     <div class="form-group mb-4">
-                        <label for="Password" class="form-label">Password</label>
-                        <input type="Password" name="Password" class="form-control" placeholder="Use: Admin123!" required />
+                        <label for="Password" class="form-label">Password (Use: 123)</label>
+                        <input type="Password" name="Password" class="form-control" placeholder="Use: 123" required />
                     </div>
 
                     <div class="d-grid gap-2 pt-2">
